--- a/lilie/frontend/src/pages/CodeResult/CodeResult.css
+++ b/lilie/frontend/src/pages/CodeResult/CodeResult.css
@@ -1,8 +1,10 @@
 .codeBlock {
     padding: 10px;
+    display: inline-block;
     border-radius: 5px;
+    cursor: pointer 
 }
 
 .codeBlock:hover {
-    background-color: rgba(0, 0, 0, 0.050);
+    background-color: rgba(0, 0, 0, 0.144);
 }
